N_queens.ipynb & sudoku.ipynb

--- a/jupyter/examples.ipynb
+++ b/jupyter/examples.ipynb
@@ -6,10 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "begin\n",
-    "    using Symbolics\n",
-    "    using SatisfiabilityInterface\n",
-    "end"
+    "using Symbolics\n",
+    "using SatisfiabilityInterface"
    ]
   },
   {
